# MWB

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: backup.hpp  backupRemoval.hpp  logger.hpp  timeInfo.hpp
src/: backup.cpp  backupRemoval.cpp  logger.cpp  main.cpp  timeInfo.cpp
